<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:saveEnabled="false"
            android:inputType="textPersonName"
            android:hint="@string/first_name_hint"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_10" />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:saveEnabled="false"
            android:inputType="textPersonName"
            android:hint="@string/last_name_hint"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/first_name" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_10" />
        <Button
            android:id="@+id/submit_button"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:backgroundTint="@color/purple_500"
            android:text="@string/submit_btn" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_30" />
        <TextView
            android:id="@+id/output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/user_name_output_hint"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/submit_button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
